{
    "name": "InputMaster",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "3ae040d5-c0e2-4c75-a4b3-f26efd89ac03",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "50cc44f8-9028-4082-905d-3e4b045d374b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "d463bebc-aba0-4648-bfc0-a52c663a07fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5c30602f-358e-4a53-985e-83732bb934c6",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "qd",
                    "id": "55092a71-4deb-4802-9827-26e2f83f53bf",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9b069167-abb7-4ea3-bf28-0ed9ee90cc48",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "dbf14efe-6c9a-49d4-9e02-b67ac8898f1d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "arrows",
                    "id": "16496565-990c-4a07-9bc5-cf76bbf6d19b",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4c3924cd-d2d3-4d8a-a5e5-c1ea9925d584",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "80f1f04e-5874-444d-a75b-ea623e14b1b0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerInteraction",
            "id": "5b51c9fb-190c-45b9-b8a4-29b42cba8949",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Value",
                    "id": "2b9a4acd-87b1-4933-8b8a-58aaa74c5589",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d80412f7-6aca-43f9-85c5-037b52e57414",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerCombat",
            "id": "a392f44d-243a-4152-a61f-1a77c4864eac",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Value",
                    "id": "6ab54a18-0785-43cf-aeac-139bf7930228",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3fe6b238-9899-4225-8a86-f771e374a05a",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}